[package]
name = "natemess"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
registry = "1.3.0"
serde = "1.0.213"
serde_derive = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "sync", "io-util"] }
utfx = "0.1.0"
